tests/derive_compile_fail/non_gc_safe.stderr
error[E0277]: the trait bound `NotGcSafe: GcSafe` is not satisfied
  --> $DIR/non_gc_safe.rs:9:10
   |
9  | #[derive(Scan)]
   |          ^^^^ the trait `GcSafe` is not implemented for `NotGcSafe`
   |
  ::: $WORKSPACE/src/plumbing.rs
   |
   | pub fn check_gc_safe<T: GcSafe>(_: &T) {}
   |                         ------ required by this bound in `check_gc_safe`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
